Uses child views in Autofill Popup so we can trigger GetAccessibleNodeData in each of the Autofill popup suggestions.

BUG=627860

Review-Url: https://codereview.chromium.org/2670003002
Cr-Commit-Position: refs/heads/master@{#453724}

Former-commit-id: 67051d3d62d1522fa44afeb2385a3bb6b6a6f128